Fixed too long questions (as long as they are not too long)

--- a/backend/quiz/static/quiz/css/quiz_game.css
+++ b/backend/quiz/static/quiz/css/quiz_game.css
@@ -14,23 +14,6 @@
 	align-items: center;
 }
 
-.answer-option {
-	padding: 15px 20px;
-	font-size: 1.2em;
-	text-align: center;
-	height: 100px;
-	width: 250px;
-	max-height: 100px;
-	max-width: 250px;
-	white-space: normal; /* Allow text to wrap to the next line */
-	word-wrap: break-word; /* Break long words to fit within the button */
-	word-break: break-word; /* Ensure long words break correctly */
-	overflow: hidden; /* Hide any overflow text */
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-
 .answer-option.selected {
 	border: 4px solid #0496ff !important;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) !important;
@@ -39,4 +22,13 @@
 
 .user-info {
 	margin-top: 20px;
+}
+
+#answers {
+	font-size: 1.2em;
+	height: 100px;
+	width: 250px;
+	white-space: normal;
+	word-wrap: break-word;
+	word-break: break-word;
 }
